--- a/hspec-core/hspec-core.cabal
+++ b/hspec-core/hspec-core.cabal
@@ -50,6 +50,7 @@ library
     , setenv
     , tf-random
     , transformers >=0.2.2.0
+    , ghc-prim
   exposed-modules:
       Test.Hspec.Core.Spec
       Test.Hspec.Core.Hooks
@@ -95,6 +96,14 @@ library
       Data.Algorithm.Diff
       Paths_hspec_core
   default-language: Haskell2010
+  default-extensions:
+    PartialTypeConstructors,
+    -- Needed for PTC annotations
+    ExplicitNamespaces,
+    QuantifiedConstraints,
+    TypeOperators,
+    UndecidableInstances,
+    FlexibleContexts
   if impl(ghc >= 8.2.1)
     build-depends:
         ghc
